--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,10 @@
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="My website title" />
+    <meta property="og:description" content="Summary of the contents of the page you are viewing" />
+    <meta property="og:image" content="{{ url_for('static', filename='ogimage.png') }}" />
+    
     <title>Project-01</title>
 
     <!-- Bootstrap -->
