--- a/templates/index.html
+++ b/templates/index.html
@@ -4,9 +4,15 @@
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:title" content="My website title" />
-    <meta property="og:description" content="Summary of the contents of the page you are viewing" />
-    <meta property="og:image" content="{{ url_for('static', filename='ogimage.png') }}" />
+    <meta property="og:title" content="My Diary" />
+    <meta
+      property="og:description"
+      content="Website untuk membuat diary singkat"
+    />
+    <meta
+      property="og:image"
+      content="https://cdn.glitch.global/5aa959d9-6314-450b-86a7-95b4c8032c76/lilartsy-64sfnAN2AwQ-unsplash.jpg?v=1712684927665"
+    />
     
     <title>Project-01</title>
 
